# BMS

./: README.md  cmd.md  pyproject.toml  requirements.txt
api/: main.py
api/auth/: hash.py  token.py
api/data/: books.json
api/handler/: authHandler.py  bookHandler.py  userHandler.py
api/model/: bookModel.py  book_model.py  userModel.py
api/query/: bookQuery.py  book_query.py  userQuery.py  user_query.py
api/router/: authRoute.py  auth_route.py  bookRoute.py  book_route.py  userRoute.py  user_route.py
api/schema/: book_schema.py  user_schema.py
api/util/: exceptions.py
back-end/: README.md  cmd.md  docker-compose.yml  pyproject.toml  requirements.txt
back-end/src/: main.py
bms/: main.py
bms-back/: .env  main.py
bms-back/auth/: hash.py  token.py
bms-back/config/: db.py
bms-back/handler/: auth_handler.py  credentials.py  title_handler.py  user_handler.py
bms-back/model/: book_model.py  title_model.py  user_model.py
bms-back/queries/: book_queries.py  title_queries.py  user_queries.py
bms-back/router/: auth_router.py  book_router.py  title_router.py  user_router.py
bms-back/schema/: auth_schema.py  book_schema.py  title_schema.py  user_schema.py
bms-front/: package-lock.json  package.json
bms-front/src/: About.jsx  App.js  AppRouter.js  index.js
bms/auth/: hash.py
client/: package-lock.json  package.json
create-vite-react-ts/: package-lock.json  package.json
data/: books.json  users.json
front/: cmd.md  package-lock.json  package.json
front-end/: package-lock.json
tests/: auth_route_test.py  user_route_test.py
(+85 files in other folders)
