[tool.poetry]
name = "BMS-back"
version = "0.1.0"
description = "Back-end for Book Management System using fastapi as framework and postgresql as database"
authors = ["Rafael Alesso <rafalesso1991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
passlib = "^1.7.4"
SQLAlchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
python-jose = "^3.3.0"
httpx = "^0.27.0"
pytest-postgresql = "^6.0.0"
black = "^24.3.0"
isort = "^5.13.2"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pydantic = "^2.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
